Added info about company location, phone number and back ground color.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
         .product h2 {
             margin-top: 0;
         }
+        footer {
+            background-color: #222;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+        .footer-container {
+            padding: 20px;
+        }
+        .footer-item {
+            margin: 10px 0;
+        }
     </style>
 </head>
 <body>
@@ -42,5 +54,18 @@
             <p>Our gloves are designed to provide superior protection and durability for all your construction needs.</p>
         </div>
     </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-item">
+                <strong>Location:</strong> 123 Main Street, Anytown, USA
+            </div>
+            <div class="footer-item">
+                <strong>Phone:</strong> (123) 456-7890
+            </div>
+            <div class="footer-item">
+                <strong>Work Hours:</strong> Mon-Fri, 9 AM - 5 PM
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
