--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>USTA GROUP LTD</title>
     <style>
-        body {
+           body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -19,13 +19,16 @@
         }
         .container {
             padding: 20px;
-            text-align: center; /* Center align content within the container */
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Center align content within the container */
         }
         .product {
             background-color: #fff;
             padding: 20px;
             margin: 20px 0;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            text-align: center; /* Center align text within the product div */
         }
         .product h2 {
             margin-top: 0;
@@ -34,7 +37,7 @@
             max-width: 100%;
             height: auto;
             display: block;
-            margin: 0 auto; /* Center align images */
+            margin: 10px 0; /* Add some margin around images */
         }
         footer {
             background-color: #222;
