--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             margin-top: 0;
         }
         .product img {
-            max-width: 100%;
-            height: auto;
+            width: 300px; /* Set image width */
+            height: 300px; /* Set image height */
             display: block;
             margin: 10px 0; /* Add some margin around images */
         }
