Moving description to the right of the image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #561717;
+            background-color: #bfabab;
         }
         header {
             background-color: #333;
@@ -51,15 +51,24 @@
         .footer-item {
             margin: 10px 0;
         }
+        figure {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 20px 0;
+        }
+        figure img {
+            max-width: 50%; /* Adjust the width of the image */
+            height: auto;
+        }
         figcaption {
             font-style: italic;
-            color: #565353;
-            text-align: center;
-            margin-top: 5px;
-            max-width: 600px; /* Limit the width of the caption */
+            color: #555;
+            text-align: left; /* Align text to the left */
+            margin-left: 20px; /* Add space between the image and the caption */
+            max-width: 50%; /* Adjust the width of the caption */
             padding: 10px; /* Add padding for better readability */
             line-height: 1.5; /* Increase line height for better readability */
-            margin: 0 auto; /* Center the caption */
         }
     </style>
 </head>
