--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             margin-top: 0;
         }
         .product img {
-            width: 300px; /* Set image width */
-            height: 300px; /* Set image height */
+            width: 500px; /* Set image width */
+            height: 400px; /* Set image height */
             display: block;
             margin: 10px 0; /* Add some margin around images */
         }
@@ -63,7 +63,7 @@
         }
         figcaption {
             font-style: italic;
-            color: #555;
+            color: #3b3838;
             text-align: left; /* Align text to the left */
             margin-left: 20px; /* Add space between the image and the caption */
             max-width: 50%; /* Adjust the width of the caption */
